--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ nav a {
   font-size: 38px;
 }
 
-#fondologin{
+#fondoDeLogin{
   background: url(https://i.ibb.co/tpQPNMZ/background3.png);
   background-repeat: no-repeat;
   background-size: cover;
